# scrape_finlex

./: .env  .gitignore  Dockerfile  README.MD  output.csv  pyproject.toml
scrape_finlex/: __init__.py  __main__.py  main.py
scrape_finlex/cli/: __init__.py
scrape_finlex/server/: __init__.py  views.py
scrape_finlex/server/static/: index.js
scrape_finlex/server/templates/: index.html
